[package]
authors = ["e3dc-mqtt-rs contributors"]
categories = ["command-line-utilities", "hardware-support"]
description = "MQTT bridge for E3DC solar battery systems using the RSCP protocol"
edition = "2021"
homepage = "https://github.com/isnogudus/e3dc-mqtt-rs"
keywords = ["e3dc", "mqtt", "solar", "battery", "rscp"]
license = "MIT"
name = "e3dc-mqtt-rs"
readme = "README.md"
repository = "https://github.com/isnogudus/e3dc-mqtt-rs"
version = "0.1.0"

[lib]
name = "e3dc_mqtt_rs"
path = "src/lib.rs"

[dependencies]
# E3DC Communication
rscp = {git = "https://github.com/isnogudus/rscp.git", branch = "optimize-read-performance"}

# MQTT
rumqttc = {version = "0.24", features = ["use-native-tls"]}

# JSON output
serde = {version = "1", features = ["derive"]}
serde_json = "1"

# Configuration
clap = {version = "4", features = ["derive"]}
toml = "0.8"

# Error Handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

# Time handling
chrono = {version = "0.4", features = ["serde"]}
humantime-serde = "1.1"
